# SQLhomework

pythonProject1/: .env-example  dao.py  database.py  models.py  pyproject.toml
pythonProject1/migrations/: env.py
pythonProject1/migrations/versions/: 2024_01_04_1800-6cc1197533b9_homework.py  2024_01_11_1804-43b74d89606d_initial.py
