[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Evgeny Fuchenko <evgenijfucenko2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
fastapi = {extras = ["all"], version = "^0.108.0"}
asyncpg = "^0.29.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
order = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
